plugins/lombok/testData/inspection/builder/BuilderInvalidIdentifier.java
<error descr="invalid^identifier is not a valid identifier">@lombok.Builder(builderClassName = "invalid^identifier")</error>
public class BuilderInvalidIdentifier {
  private String field;
}
